# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
+import dashboardRouter from "./dashboard";
 import healthRouter from "./health";
+import invoicesRouter from "./invoices";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(dashboardRouter);
+router.use(invoicesRouter);
 
 export default router;
